--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hayat Muhammad Niazi</title>
+	<title>Hayat Muhammad Niazi - FlexBox</title>
 	<!--CSS file link -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
